--- a/public/templates/index.dust
+++ b/public/templates/index.dust
@@ -22,7 +22,8 @@
                 </label>
             </div>
             <button id="run" class="btn btn-primary btn-block">Run (Control-R)</button>
-            <button id="run" class="btn btn-primary btn-block">Clear Bottom Screen (Control-L)</button>
+            <button id="clear" class="btn btn-primary btn-block">Clear Bottom Screen (Control-L)</button>
+            <button id="share" class="btn btn-primary btn-block">Share this Program</button>
         </div>
     </div>
 
@@ -33,6 +34,24 @@
     </div>
 
 </div>
+<div id="urlModal" class="modal fade">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                <h4 class="modal-title">Use this link to share this program</h4>
+            </div>
+            <div class="modal-body">
+                <div style="width:645px;">
+                <textarea style="width:570px;height:300px;"></textarea>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
 {/body}
 
 {<style}
@@ -40,6 +59,7 @@
 <link href='http://fonts.googleapis.com/css?family=Source+Code+Pro' rel='stylesheet' type='text/css'>
 {/style}
 {<script}
+<script src="/components/lz-string/libs/lz-string.min.js"></script>
 <script src="/js/browser-polyfill.js" type="text/javascript"></script>
 <script src="/js/browser.js" type="text/javascript"></script>
 <script src="/components/josh.js/js/readline.js" type="text/javascript"></script>
