--- a/public/templates/index.dust
+++ b/public/templates/index.dust
@@ -59,6 +59,8 @@
 <link href='http://fonts.googleapis.com/css?family=Source+Code+Pro' rel='stylesheet' type='text/css'>
 {/style}
 {<script}
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/stacktrace.js/0.6.4/stacktrace.min.js"></script>
+<script src="/components/bootbox/bootbox.js"></script>
 <script src="/components/lz-string/libs/lz-string.min.js"></script>
 <script src="/js/browser-polyfill.js" type="text/javascript"></script>
 <script src="/js/browser.js" type="text/javascript"></script>
