--- a/public/templates/layouts/master.dust
+++ b/public/templates/layouts/master.dust
@@ -22,11 +22,14 @@
     {+body /}
 </div>
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+<script src="/components/jquery/dist/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="/components/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="/components/underscore/underscore-min.js"></script>
 {+script /}
+<script type="text/javascript">
+    var _csrf = '{_csrf}';
+</script>
 <script src="/js/app.js"></script>
 </body>
 </html>
