--- a/public/templates/game.dust
+++ b/public/templates/game.dust
@@ -1,11 +1,6 @@
 {>"layouts/master" /}
 {<title}Advent.js Game Playground{/title}
 {<body}
-    <div class="github-fork-ribbon-wrapper right-bottom">
-        <div class="github-fork-ribbon">
-            <a target="_blank" href="https://github.com/djMax/advent.js">Fork me on GitHub</a>
-        </div>
-    </div>
     <div id="login">
         <div class="form">
             <h3 class="title">What's your nickname?</h3>
@@ -14,8 +9,15 @@
     </div>
 
     <div class="container-fluid formula">
+        <div class="row" id="yourNumber">
+            <div class="text-center"><h1>Your number is <span>?</span></h1></div>
+        </div>
+
         <div class="row terms">
-            <div class="col-sm-3"><div id="item1">?</div></div>
+            <div class="col-sm-3"><div id="item1">?</div>
+                <div id="t1Choice" style="border:none;display:none;">
+                </div>
+            </div>
             <div class="col-sm-2"><div id="op">?</div>
                 <div id="opChoice" style="border:none;display:none;">
                     <button class="btn btn-lg col-sm-3">+</button>
@@ -24,7 +26,10 @@
                     <button class="btn btn-lg col-sm-3">÷</button>
                 </div>
             </div>
-            <div class="col-sm-3"><div id="item2">?</div></div>
+            <div class="col-sm-3"><div id="item2">?</div>
+                <div id="t2Choice" style="border:none;display:none;">
+                </div>
+            </div>
             <div class="col-sm-1"><div id="eq">=</div></div>
             <div class="col-sm-3"><div id="tgt">?</div></div>
         </div>
@@ -35,15 +40,17 @@
             </div>
         </div>
 
-        <div class="row" id="yourNumber">
-            <div class="text-center"><h1>Your number is <span>?</span></h1></div>
+        <div class="row" id="consoleRow">
+            <div id="shell-panel">
+                <div id="shell-view"></div>
+            </div>
         </div>
+
     </div>
 
 {/body}
 
 {<style}
-<link href="/components/github-fork-ribbon-css/gh-fork-ribbon.css" rel="stylesheet" type="text/css">
 <link href='http://fonts.googleapis.com/css?family=Source+Code+Pro' rel='stylesheet' type='text/css'>
     <style type="text/css">
         #login {
@@ -91,26 +98,47 @@
             font-weight: 100;
         }
         .formula>div.terms>div {
-            height: 250px;
-            margin-top: 15%;
+            height: 160px;
+            margin-top: 10%;
             text-align: center;
         }
         .formula>div.terms>div>div {
             border: 1px solid black;
             margin: auto;
             vertical-align: middle;
-            height: 50%;
+            height: 120px;
             width: 75%;
-            font-size: 82px;
+            font-size: 72px;
         }
         .formula>div.terms>div>#eq, .formula>div.terms>div>#tgt {
             border: none;
         }
         #opChoice {
+            z-index: 50;
             position: absolute;
             top: 125px;
             width: 300px;
             left: -20px;
+        }
+        #t1Choice {
+            position: absolute;
+            z-index: 50;
+            top: 125px;
+            width: 300px;
+        }
+        #t2Choice {
+            position: absolute;
+            z-index: 50;
+            top: 125px;
+            width: 300px;
+        }
+        #t1Choice button, #t2Choice button {
+            width: 100%;
+            display: block;
+            margin-bottom: 5px;
+        }
+        #consoleRow {
+            min-height: 150px;
         }
 
     </style>
@@ -120,6 +148,9 @@
 <script src="/components/bootbox/bootbox.js"></script>
 <script src="/js/browser-polyfill.js" type="text/javascript"></script>
 <script src="/js/browser.js" type="text/javascript"></script>
+<script src="/components/josh.js/js/readline.js" type="text/javascript"></script>
+<script src="/components/josh.js/js/history.js" type="text/javascript"></script>
+<script src="/components/josh.js/js/killring.js" type="text/javascript"></script>
 <script src="/socket.io/socket.io.js"></script>
 <script type="text/javascript">
     var page = 'game';
