--- a/public/templates/index.dust
+++ b/public/templates/index.dust
@@ -67,6 +67,7 @@
 <script src="/components/josh.js/js/history.js" type="text/javascript"></script>
 <script src="/components/josh.js/js/killring.js" type="text/javascript"></script>
 <script src="/components/ace-builds/src-noconflict/ace.js" charset="utf-8"></script>
+<script src="/socket.io/socket.io.js"></script>
 <script type="text/javascript">
     var page = 'consoleGame';
 </script>
