--- a/public/templates/layouts/master.dust
+++ b/public/templates/layouts/master.dust
@@ -16,6 +16,7 @@
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <link rel="stylesheet" href="/css/app.css" />
+    <link rel="stylesheet" href="/wit/microphone/microphone.min.css" />
 </head>
 <body>
 {+rawBody /}
